40-eks/app/03-frontend/frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: roboshop
  labels:
    project: roboshop
    tier: backend
    component: frontend 
spec:
  selector:
    project: roboshop
    tier: backend
    component: frontend 
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
