40-eks/app/03-frontend/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb  # Specifies the Ingress Controller to use
  rules:
  - host: "roboshop-dev.devopswiththota.online"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
